// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataSourceDetailActions should render properly when creating new 1`] = `
<Mi
  primary={
    Array [
      <ai
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </ai>,
      <ai
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </ai>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing collaborative datasource 1`] = `
<Mi
  primary={
    Array [
      <ai
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </ai>,
    ]
  }
  secondary={Array []}
/>
`;

exports[`DataSourceDetailActions should render properly when editing owned datasource 1`] = `
<Mi
  primary={
    Array [
      <ai
        color="primary"
        icon={<Save />}
        onClick={[Function]}
        size="m"
    >
        Save
    </ai>,
      <ai
        icon={<Cancel />}
        onClick={[Function]}
        size="m"
    >
        Cancel
    </ai>,
    ]
  }
  secondary={
    Array [
      <ai
        color="danger"
        icon={<Delete />}
        onClick={[Function]}
        size="m"
    >
        Delete
    </ai>,
    ]
  }
/>
`;
